# masked-diffusion-thesis

./: .gitignore  .gitmodules  =1.1.0  CLAUDE.md  DEPRECATIONS.md  QUICKSTART.md  README.md  REPRODUCIBILITY.md  START_HERE.md  external_repos.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
archive/: ARCHIVE_MANIFEST.md  README.md
checkpoints/: README.md
configs/: base.yaml  mdlm_hpc_owt_mini.yaml  mdlm_hpc_owt_prod.yaml  remdm.yaml  remdm_hpc_owt.yaml  remdm_hpc_owt_mini_cap.yaml  remdm_hpc_owt_mini_conf.yaml  remdm_hpc_owt_mini_loop.yaml  remdm_hpc_owt_mini_rescale.yaml  remdm_hpc_owt_prod_cap.yaml  remdm_hpc_owt_prod_loop.yaml  remdm_hpc_owt_prod_rescale.yaml  remdm_hpc_smoke.yaml
docs/: 00_current_status.md  01_research_direction.md  02_experiments.md  03_theory.md  04_results_index.md  05_next_steps.md  06_theory_first_research_plan.md  07_experiment_log.md  08_backend_feasibility_audit.md  09_informed_correctors_training_contingency.md  10_external_gpu_text8_fallback.md  ACTIVE_RESEARCH_STATE.md  EXPERIMENT_GRID.md  HPC_SETUP.md  QUICK_REFERENCE.md  README.md  REMDM_INTEGRATION.md  STRATEGY_TEST_RESULTS.md  comparison.html  comparison.md  correctors_deep_dive.md  email_informed_correctors_authors.md  empirical_analysis.md  experimental_infrastructure.md  implementation_plan.md  literature_map.md  reading_plan.md  style.css  thesis_direction.md
figures/: README.md
hpc/: README.md  cross_backbone_proseco_llada_sft_bounded.sbatch  cross_backbone_proseco_llada_sft_resume_phase2b.sbatch  job.sh  phase0_smoke_k3.sbatch  phase1_interaction_diagnostics.sbatch  phase1_proseco_owt.sbatch  phase2b_proseco_owt.sbatch  phase3a_combinatorial.sbatch  pull.sh  push.sh  remdm_full_eval.sbatch  remdm_smoke.sbatch  remdm_sweep.sbatch  remdm_t1000_eval.sbatch  remdm_t1000_parallel.sbatch  remedi_eval.sbatch  setup_env.sh  submit.sh
notebooks/: 01_spectral_gap_and_mixing.ipynb  02_discretization_error_and_correctors.ipynb  README.md
research/: adaptive_controller_research_notes.md  candidate_theorems.md  corrector_timing_direction_lock_memo.tex  corrector_timing_direction_lock_memo_review.md  open_questions.md  proof_ledger.md  proof_worklog.md
results/: BACKEND_FEASIBILITY_INDEX.json  EXPERIMENT_INDEX.json  README.md  combined_comparison.md  metrics_summary.csv  paper_alignment.md
scripts/: README.md  aggregate_results.py  analyze_combinatorial_diagnostics.py  analyze_inverted_policies.py  analyze_phase1_interactions.py  analyze_phase2a.py  analyze_phase2b.py  analyze_phase3a.py  compute_theorem_a_constants.py  debug_env.py  (+20 more)
(+1154 files in other folders)
