[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masked-diffusion-thesis"
version = "0.1.0"
description = "MSc thesis repo: masked diffusion models (ReMDM, PRISM) with reproducible experiments."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Matteo Mizzolo"}]
dependencies = [
  "pyyaml>=6.0",
  "numpy>=1.24",
  "tqdm>=4.66",
  "rich>=13.7",
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
  "black>=24.1",
  "isort>=5.13",
  "pre-commit>=3.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
