[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masked-diffusion-thesis"
version = "0.1.0"
description = "MSc thesis repo: masked diffusion models (ReMDM, PRISM) with reproducible experiments."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Matteo Mizzolo"}]
dependencies = [
  "pyyaml>=6.0",
  "numpy>=1.24",
  "tqdm>=4.66",
  "rich>=13.7",
  "torch>=2.1",
  "packaging==24.2",  # Pinned for lightning compatibility
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
  "black>=24.1",
  "isort>=5.13",
  "pre-commit>=3.6",
]

# Upstream dependencies (installed by setup_hpc_env.sh)
hpc = [
  "datasets==2.18.0",
  "einops==0.7.0",
  "fsspec==2024.2.0",
  "h5py==3.10.0",
  "hydra-core==1.3.2",
  "ipdb==0.13.13",
  "lightning==2.2.1",
  "omegaconf==2.3.0",
  "pandas==2.2.1",
  "seaborn==0.13.2",
  "scikit-learn==1.4.0",
  "timm==0.9.16",
  "transformers==4.38.2",
  "triton==2.2.0",
  "wandb==0.13.5",
  "mauve-text==0.4.0",
  "jupyterlab",
  "gpustat",
  "nvitop",
]

# Compiled CUDA extensions (built from source on HPC)
# These are NOT pip installable on macOS/CPU-only systems
# Install via: bash scripts/setup_hpc_env.sh
cuda-extensions = [
  "flash-attn==2.5.6",
  # causal-conv1d (installed from source)
  # mamba-ssm (installed from source)
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
